--- a/install_docker.yml
+++ b/install_docker.yml
@@ -10,6 +10,7 @@
         - yum-utils
         - device-mapper-persistent-data
         - lvm2
+        - python-pip
   - name: "Install Docker SDK for Python"
     shell: pip install docker
   - name: "Configuring docker-ce repo"
