--- a/install_docker.yml
+++ b/install_docker.yml
@@ -3,6 +3,14 @@
   become: true
   gather_facts: no
   tasks:
+  - name: Install EPEL repo.
+    yum:
+      name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm
+      state: present
+  - name: Import EPEL GPG key.
+    rpm_key:
+      key: /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-{{ ansible_distribution_major_version }}
+      state: present
   - name: "Installing Docker Prerequisite packages"
     yum:
       state: latest
